--- a/_includes/contact-form.html
+++ b/_includes/contact-form.html
@@ -1,7 +1,7 @@
-<section class="contact-form-section">
-    <div class="container">
-        <div class="contact-form-wrapper">
-            <form name='epiclandscape contact' action="/success" method="POST" netlify class="contact-form"
+<section>
+    <div class="container container--narrow">
+        <div class="form-wrapper">
+            <form name='epiclandscape contact' action="/success" method="POST" netlify class="form"
                 data-netlify="true">
                 <div class="form-group">
                     <label for="name" class="form-label">Name</label>
@@ -23,7 +23,7 @@
 
                 <div class="form-group">
                     <label for="enquiry-type" class="form-label">Enquiry Type</label>
-                    <select id="enquiry-type" name="enquiry-type" class="form-input form-select">
+                    <select id="enquiry-type" name="enquiry-type" class="form-select">
                         <option value="">Select an option</option>
                         <option value="new-construction">New Construction</option>
                         <option value="existing-property">Existing Property</option>
