--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,4 +1,4 @@
-<section class="hero">
+<section class="hero bg-pattern--fern">
     <div class="hero-logo">
         <div class="hero-logo-desktop">
             {% include svg/logo.html %}
@@ -10,10 +10,5 @@
             <p>Crafting Nature’s Masterpieces, One Epic Landscape at a Time
         </div>
     </div>
-    <div class="hero-fern hero-fern--bottom-left">
-        <img src="/assets/img/fern2.svg" alt="Fern decoration" class="fern-image">
-    </div>
-    <div class="hero-fern hero-fern--top-right">
-        <img src="/assets/img/fern1.svg" alt="Fern decoration" class="fern-image">
-    </div>
+    {% include fern-decoration-home.html %}
 </section>
