--- a/_sass/abstract/_variables.scss
+++ b/_sass/abstract/_variables.scss
@@ -7,10 +7,12 @@
 
 .bg.bg-cream {
     background-color: var(--color-bg-cream);
+    margin-bottom: 0;
 }
 
 .bg.bg-whitecream {
     background-color: var(--color-bg-whitecream);
+    margin-bottom: 0;
 }
 
 //  COLOURS
