--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -26,7 +26,7 @@
 
 <!-- Navigation -->
 {% if page.url == "/" %}
-{% assign nav_class = "bg bg-cream" %}
+{% assign nav_class = "cream" %}
 {% else %}
 {% assign nav_class = "" %}
 {% endif %}
