--- a/_sass/pages/_process.scss
+++ b/_sass/pages/_process.scss
@@ -79,8 +79,8 @@
 }
 
 .process-step__image {
-    width: 300px;
-    height: 200px;
+    height: auto;
+    max-width: 500px;
     overflow: hidden;
     border-radius: 8px;
     flex-shrink: 0;
