--- a/_sass/pages/_projects.scss
+++ b/_sass/pages/_projects.scss
@@ -269,7 +269,7 @@
     flex-direction: row;
     gap: 0.5rem;
     padding: 1rem;
-    background: rgba(251, 249, 249, 0.9);
+    background: $color-bg-cream;
     justify-content: center;
     overflow-x: auto;
     scrollbar-width: thin;
@@ -461,11 +461,6 @@
         max-height: 50vh;
         min-height: 200px;
     }
-
-    .project-modal__image {
-        border-radius: 8px;
-    }
-
     .project-modal__side-nav {
         width: 50px;
         height: 50px;
