--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -25,11 +25,11 @@
 
 
 <!-- Navigation -->
-{% if page.url == "/" %}
+<!-- {% if page.url == "/" %}
 {% assign nav_class = "cream" %}
 {% else %}
 {% assign nav_class = "" %}
-{% endif %}
+{% endif %} -->
 <nav class="nav {{ nav_class }}">
     <ul class="nav-list">
         <!-- Logo -->
