--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,5 +5,8 @@
     {% include fonts.html %}
     <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
     <link rel="shortcut icon" type="image/x-icon" href="{{ '/assets/img/favicon.png' | relative_url }}">
+
+    {% if page.url contains '/admin/' %}
     <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
+    {% endif %}
 </head>
