--- a/_sass/pages/_projects.scss
+++ b/_sass/pages/_projects.scss
@@ -216,7 +216,7 @@
 
     &:hover {
         background: rgba(0, 0, 0, 1);
-        transform: translateY(-50%) scale(1.1);
+        transform: scale(1.1);
         box-shadow: 0 6px 20px rgba(0, 0, 0, 0.4);
     }
 
