--- a/_sass/pages/_projects.scss
+++ b/_sass/pages/_projects.scss
@@ -199,7 +199,7 @@
 .project-modal__side-nav {
     position: fixed;
     top: 50%;
-    transform: translateY(-50%);
+    transform:;
     background: $black-transparent;
     color: white;
     border: none;
@@ -221,16 +221,16 @@
     }
 
     &:active {
-        transform: translateY(-50%) scale(0.95);
+        transform: scale(0.95);
     }
 
     &:disabled {
         opacity: 0.3;
         cursor: not-allowed;
-        transform: translateY(-50%);
+        transform:;
 
         &:hover {
-            transform: translateY(-50%);
+            transform:;
             background: rgba(0, 0, 0, 0.9);
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
         }
@@ -469,7 +469,7 @@
         }
 
         &:hover {
-            transform: translateY(-50%) scale(1.05);
+            transform: scale(1.05);
         }
     }
 
