--- a/_sass/components/_form.scss
+++ b/_sass/components/_form.scss
@@ -2,6 +2,8 @@
 @use "../abstract/respond" as *;
 
 .form {
+    z-index: 1000;
+    position: relative;
     &-group {
         margin-bottom: 2rem;
     }
