--- a/_sass/pages/_projects.scss
+++ b/_sass/pages/_projects.scss
@@ -132,7 +132,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(241, 241, 242, 0.8);
+    background: $color-bg-cream;
 }
 
 .project-modal__content {
