--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,13 +1,13 @@
 <footer class="footer">
     <div class="footer-content">
         <div class="footer-section">
-            <a class='icon' href="tel:0402263190">
+            <a class='icon' href="{{ site.data.theme.contact_info.phone_link | default: 'tel:0402263190' }}">
                 <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                     <title>Phone</title>
                     <path
                         d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z" />
                 </svg>
-                <span>0402 263 190</span>
+                <span>{{ site.data.theme.contact_info.phone | default: "0402 263 190" }}</span>
             </a>
         </div>
 
@@ -16,10 +16,6 @@
                 <a class='icon' target="_blank" href="https://www.facebook.com/epiclandscapedesigns"
                     aria-label="Facebook">
                     {% include svg/facebook.svg %}
-                </a>
-                <a class='icon' target="_blank" href="https://www.youtube.com/@EpicLandscapeDesignsAustralia"
-                    aria-label="YouTube">
-                    {% include svg/youtube.svg %}
                 </a>
                 <a class='icon' target="_blank" href="https://www.instagram.com/epiclandscapedesigns/"
                     aria-label="Instagram">
@@ -33,10 +29,11 @@
             </div>
         </div>
         <div class="footer-section">
-                <a class='icon' href="mailto:info@epiclandscapedesigns.com.au">
-                    {% include svg/gmail.svg %}
-                    <span>info@epiclandscapedesigns.com.au</span>
-                </a>
+            <a class='icon' href="{{ site.data.theme.contact_info.email_link | default: "
+                mailto:info@epiclandscapedesigns.com.au" }}">
+                {% include svg/gmail.svg %}
+                <span>{{ site.data.theme.contact_info.email | default: "info@epiclandscapedesigns.com.au" }}</span>
+            </a>
         </div>
 
     </div>
