--- a/_sass/layout/_footer.scss
+++ b/_sass/layout/_footer.scss
@@ -4,7 +4,7 @@
 
 .footer {
     border-top: 0.5px solid rgba($color-dark-grey, 0.1);
-    background-color: $color-bg-cream;
+    background-color: var(--color-footer);
     padding: 4rem 0 2rem;
     position: relative;
 
