--- a/_sass/pages/_process.scss
+++ b/_sass/pages/_process.scss
@@ -22,6 +22,11 @@
     max-width: 600px;
 }
 
+// Add heading color for page titles
+.page__title {
+    color: var(--color-heading);
+}
+
 // Process Steps
 .process-steps__items {
     display: flex;
@@ -49,7 +54,7 @@
 
 .process-step__number {
     font-size: 8rem;
-    color: $color-primary;
+    color: var(--color-heading);
     font-family: "Montserrat", sans-serif;
     line-height: 1;
     min-width: 50px;
@@ -61,7 +66,7 @@
 }
 
 .process-step__title {
-    font-size: 2.4rem;
+    font-size: $font-size-lg;
     font-weight: 500;
     color: $color-font;
     margin-bottom: 1.5rem;
