--- a/_sass/layout/_nav.scss
+++ b/_sass/layout/_nav.scss
@@ -77,7 +77,7 @@
         display: block;
         width: 32px;
         height: 3px;
-        background: $color-black;
+        background: $color-hamburger-icon;
         border-radius: 2px;
         transition: all 0.3s;
     }
@@ -159,7 +159,7 @@
     right: 1rem;
     background: none;
     border: none;
-    color: $color-black;
+    color: $color-close-icon;
     font-size: 3rem;
     cursor: pointer;
     z-index: 2;
