--- a/_sass/layout/_footer.scss
+++ b/_sass/layout/_footer.scss
@@ -38,7 +38,7 @@
     }
 
     * {
-        color: $color-dark-grey;
+        color: $color-footer-text;
         font-family: $primary-font;
     }
 
