--- a/_sass/components/_hero.scss
+++ b/_sass/components/_hero.scss
@@ -86,7 +86,25 @@
             text-align: center;
             color: $color-dark-grey;
             margin-top: 2rem;
+            margin-bottom: 4rem;
         }
+    }
+
+    &-cta-button {
+        display: inline-block;
+        background-color: #b5d887;
+        color: white;
+        padding: 16px 32px;
+        text-decoration: none;
+        font-family: "Montserrat", sans-serif;
+        position: relative;
+        left: 50%;
+        transform: translateX(-50%);
+        transition: all 0.3s ease;
+        &:hover {
+            background-color: #a0c969;
+        }
+
     }
 }
 
