--- a/_sass/layout/_nav.scss
+++ b/_sass/layout/_nav.scss
@@ -18,16 +18,13 @@
 }
 
 .nav {
-    background-color: var(--color-nav);
+    // background-color: var(--color-nav);
     height: 100px;
-
-    @include respond(sm) {
-        position: fixed; // Fixed positioning that stays in place
-    }
+    position: fixed; // Fixed positioning that stays in place on all screen sizes
     top: 0;
     left: 0;
     right: 0;
-    z-index: 100;
+    z-index: 9;
 
     &-list {
         list-style: none;
