--- a/_sass/components/_hero.scss
+++ b/_sass/components/_hero.scss
@@ -52,6 +52,9 @@
         left: 50%;
         transform: translate(-50%, 50%);
         max-width: 600px;
+        @include respond(sm) {
+            top: 15%;
+        }
     }
 
     &-logo-desktop {
