--- a/_sass/layout/_nav.scss
+++ b/_sass/layout/_nav.scss
@@ -18,7 +18,7 @@
 }
 
 .nav {
-    // background-color: var(--color-nav);
+    background-color: var(--color-nav);
     height: 100px;
     position: fixed; // Fixed positioning that stays in place on all screen sizes
     top: 0;
