--- a/_sass/components/_hero.scss
+++ b/_sass/components/_hero.scss
@@ -95,7 +95,7 @@
 
     &-cta-button {
         display: inline-block;
-        background-color: #b5d887;
+        background-color: var(--color-primary);
         color: white;
         padding: 16px 32px;
         text-decoration: none;
