--- a/_sass/components/_hero.scss
+++ b/_sass/components/_hero.scss
@@ -105,7 +105,7 @@
         transform: translateX(-50%);
         transition: all 0.3s ease;
         &:hover {
-            background-color: #a0c969;
+            transform: scale(1.05);
         }
 
     }
