--- a/_sass/components/_decoration.scss
+++ b/_sass/components/_decoration.scss
@@ -22,6 +22,8 @@
         &-top-right {
             top: -160px;
             right: -120px;
+            position: fixed;
+            z-index: 10;
 
             @include respond(sm) {
                 top: -90px;
