--- a/_sass/components/_decoration.scss
+++ b/_sass/components/_decoration.scss
@@ -1,6 +1,10 @@
 @use "../abstract/variables" as *;
 @use "../abstract/respond" as *;
 
+.bg-pattern--fern {
+    z-index: 10;
+}
+
 // Decorative elements
 .decoration {
     position: absolute;
