--- a/_sass/layout/_layout.scss
+++ b/_sass/layout/_layout.scss
@@ -8,7 +8,7 @@ body {
 
 // Common page layout patterns
 .page {
-    position: relative;
+    position: static;
     min-height: 90vh;
     padding: 2rem 0;
     z-index: 1;
