--- a/_sass/layout/_layout.scss
+++ b/_sass/layout/_layout.scss
@@ -31,6 +31,7 @@ body {
         font-weight: 300;
         letter-spacing: -0.02em;
         text-align: left;
+        padding-top: 5rem;
 
         @include respond(sm) {
             font-size: $font-size-md;
